version/0.80/_sources/autoapi/pyedb/misc/siw_feature_config/xtalk_scan/net/SingleEndedNet.rst.txt






:class:`SingleEndedNet`
=======================


.. py:class:: pyedb.misc.siw_feature_config.xtalk_scan.net.SingleEndedNet

   
   Single ended net class handler.

   This class manages the configuration for single-ended nets including
   impedance, thresholds, and driver/termination parameters.














   .. rubric:: Examples

   >>> from pyedb.misc.siw_feature_config.xtalk_scan.net import SingleEndedNet
   >>> net = SingleEndedNet()
   >>> net.name = "DDR_DQ0"
   >>> net.nominal_impedance = 50.0
   >>> net.warning_threshold = 45.0
   >>> net.violation_threshold = 40.0
   >>> net.driver_rise_time = "100ps"
   >>> net.voltage = 1.2

   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SingleEndedNet

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~extend_xml`
            - Write XML object section.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 
          * - :py:attr:`~nominal_impedance`
            - 
          * - :py:attr:`~warning_threshold`
            - 
          * - :py:attr:`~violation_threshold`
            - 
          * - :py:attr:`~fext_warning_threshold`
            - 
          * - :py:attr:`~fext_violation_threshold`
            - 
          * - :py:attr:`~next_warning_threshold`
            - 
          * - :py:attr:`~next_violation_threshold`
            - 
          * - :py:attr:`~driver_rise_time`
            - 
          * - :py:attr:`~voltage`
            - 
          * - :py:attr:`~driver_impedance`
            - 
          * - :py:attr:`~termination_impedance`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.misc.siw_feature_config.xtalk_scan.net import SingleEndedNet


Attribute detail
----------------

.. py:attribute:: name
   :type:  str | None
   :value: None


.. py:attribute:: nominal_impedance
   :type:  float | None
   :value: None


.. py:attribute:: warning_threshold
   :type:  float | None
   :value: None


.. py:attribute:: violation_threshold
   :type:  float | None
   :value: None


.. py:attribute:: fext_warning_threshold
   :type:  float | None
   :value: None


.. py:attribute:: fext_violation_threshold
   :type:  float | None
   :value: None


.. py:attribute:: next_warning_threshold
   :type:  float | None
   :value: None


.. py:attribute:: next_violation_threshold
   :type:  float | None
   :value: None


.. py:attribute:: driver_rise_time
   :type:  str | float | None
   :value: None


.. py:attribute:: voltage
   :type:  float | None
   :value: None


.. py:attribute:: driver_impedance
   :type:  float | None
   :value: None


.. py:attribute:: termination_impedance
   :type:  float | None
   :value: None




Method detail
-------------

.. py:method:: extend_xml(parent) -> None

   
   Write XML object section.


   :Parameters:

       **parent** : :obj:`xml.etree.ElementTree.Element`
           Parent XML element to extend.














   ..
       !! processed by numpydoc !!




